# cdec-dtrain-legacy

./: .gitignore  0001-minimal-decoder.patch  feed.rb
decoder/: Makefile.am  README.net  feed.cc  feed.rb  local.cc  minimal_decoder.cc  network_decoder.cc
environment/: LocalConfig.pm
extractor/: Makefile.am  run_extractor.cc
net_test/: README  cdec.ini  dtrain.ini  extract.ini  fake_input  run.rb
net_test/work/: weights.final
net_test/work/g/: 0.grammar  1.grammar  10.grammar  11.grammar  12.grammar  13.grammar  14.grammar  15.grammar  16.grammar  17.grammar  18.grammar  19.grammar  2.grammar  20.grammar  21.grammar  22.grammar  23.grammar  24.grammar  25.grammar  26.grammar  27.grammar  28.grammar  29.grammar  3.grammar  30.grammar  31.grammar  32.grammar  33.grammar  34.grammar  35.grammar  4.grammar  5.grammar  6.grammar  7.grammar  8.grammar  9.grammar
patches/: mira_hack_fix_wp.patch
python/: feed_extract.rb
python/cdec/: _cdec.cpp  lattice.pxd  lattice.pxi
python/cdec/sa/: extract.py
training/dtrain/: Makefile.am  downpour.rb  downpour_delayed.rb  downpour_no_cma.rb  dtrain.cc  dtrain.h  dtrain_net.cc  dtrain_net.h  dtrain_net_interface.cc  dtrain_net_interface.h  feed.rb  feed1.rb  kbestget.h  ksampler.h  lplp.rb  pairs.h  parallelize.rb  sample.h  sample_net_interface.h  score.cc  score.h  score_net_interface.h  update.h
training/dtrain/example/parallelized/: README  cdec.ini  in
training/dtrain/example/parallelized/work/: out.0.0  out.1.0  out.1.1  out.1.2  out.2.0  out.3.0  shard.0.0  weights.0.1  weights.1  weights.2  weights.2.0  weights.2.2  weights.3.0  weights.3.1
training/dtrain/example/standard/: cdec.ini  dtrain.ini
training/dtrain/example/toy/: in
training/dtrain/examples/net/: README  cdec.ini
training/dtrain/examples/net/work/: out.0  out.2
training/dtrain/examples/parallelized/: README  cdec.ini  dtrain.ini
training/dtrain/examples/parallelized/work/: out.0.0  out.0.1  out.0.2  out.1.0  out.1.1  out.1.2  out.2.0  out.2.1  out.2.2  out.3.0  out.3.1  out.3.2  shard.0.0.in  shard.1.0.in  shard.2.0.in  shard.3.0.in  weights.0  weights.0.0  weights.0.1  weights.0.2  weights.1  weights.1.0  weights.1.1  weights.1.2  weights.2  weights.2.0  weights.2.1  weights.2.2  weights.3.0  weights.3.1  weights.3.2
training/dtrain/examples/standard/: dtrain.ini  weights
training/dtrain/examples/toy/: dtrain.ini  expected-output  weights
training/pro/: pro.pl
utils/: Makefile.am  atools_net.cc  fast_sparse_vector.h
word-aligner/: Makefile.am  fast_align.cc  feed.rb  net_fa.cc
